fix annoying spacing issue

--- a/sass/shortcodes/_research_card.scss
+++ b/sass/shortcodes/_research_card.scss
@@ -42,8 +42,4 @@
     border-color: var(--rc-bold_border);
 
   }
-
-  .paper-table td:nth-child(2) {
-    padding-left: 2rem;
-  }
 }
